--- a/app/src/main/res/menu/menu_search_songs.xml
+++ b/app/src/main/res/menu/menu_search_songs.xml
@@ -5,6 +5,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_search"
-        android:title="Item" />
+        android:icon="@drawable/ic_delete"
+        android:title="@string/remove_song" />
 </menu>
