--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -48,4 +48,14 @@
         app:layout_constraintStart_toEndOf="@+id/list_songs_cardView_thumb"
         app:layout_constraintTop_toBottomOf="@+id/list_songs_title" />
 
+    <Button
+        android:id="@+id/btn_popup_menu"
+        android:layout_width="39dp"
+        android:layout_height="34dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/three_dots_options"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
