--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -35,6 +35,8 @@
         android:text="TextView"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/btn_popup_menu"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/list_songs_cardView_thumb"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,13 +47,15 @@
         android:layout_marginStart="7dp"
         android:layout_marginTop="2dp"
         android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/btn_popup_menu"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/list_songs_cardView_thumb"
         app:layout_constraintTop_toBottomOf="@+id/list_songs_title" />
 
     <Button
         android:id="@+id/btn_popup_menu"
-        android:layout_width="39dp"
-        android:layout_height="34dp"
+        android:layout_width="54dp"
+        android:layout_height="47dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/three_dots_options"
         app:layout_constraintBottom_toBottomOf="parent"
