--- a/app/src/main/res/menu/menu_song_options_recycler.xml
+++ b/app/src/main/res/menu/menu_song_options_recycler.xml
@@ -4,4 +4,9 @@
         android:id="@+id/remove_song"
         android:title="@string/remove_song"
         android:icon="@drawable/ic_delete" />
+
+    <item
+        android:id="@+id/details_song"
+        android:title="@string/song_details"
+        android:icon="@drawable/three_dots_options" />
 </menu>
