--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#001822</color>
     <color name="gray">#A3A3AB</color>
+    <color name="gold">#A8CF45</color>
+    <color name="light_blue">#0098DA</color>
 </resources>
