--- a/app/src/main/res/menu/play_back_bottom_menu.xml
+++ b/app/src/main/res/menu/play_back_bottom_menu.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/round_add_home_24" />
 
     <item
-        android:id="@+id/searchNewSongs"
+        android:id="@+id/searchNewSongsFragment"
         android:title="@string/search_new_songs"
         android:icon="@drawable/ic_search" />
 
