--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,28 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
-
-        <fragment android:id="@+id/loginFragment"
-            android:name="br.com.listennow.ui.fragments.LoginFragment"
-            android:label="@string/login"
-            tools:layout="@layout/fragment_login" >
-                <action
-                    android:id="@+id/action_loginFragment_to_registerFragment"
-                    app:destination="@id/registerFragment" />
-                <action
-                    android:id="@+id/action_loginFragment_to_homeFragment"
-                    app:destination="@id/homeFragment" />
-        </fragment>
-
-        <fragment android:id="@+id/registerFragment"
-            android:name="br.com.listennow.ui.fragments.RegisterFragment"
-            android:label="@string/register"
-            tools:layout="@layout/fragment_register" >
-                <action
-                    android:id="@+id/action_registerFragment_to_loginFragment"
-                    app:destination="@id/loginFragment" />
-        </fragment>
+    app:startDestination="@id/homeFragment">
 
         <fragment android:id="@+id/homeFragment"
             android:name="br.com.listennow.ui.fragments.HomeFragment"
