feat: Syncing songs when swiping

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,14 +6,22 @@
     tools:context=".ui.fragments.HomeFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/songs"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="415dp"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@+id/play_back_buttons"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search"
-        tools:listitem="@layout/item_list" />
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_songs"
+        android:layout_width="match_parent"
+        android:layout_height="632dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/songs"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="415dp"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/play_back_buttons"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search"
+            tools:listitem="@layout/item_list" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 </FrameLayout>
