feat: Creating playlists and adding songs

--- a/app/src/main/res/menu/play_back_bottom_menu.xml
+++ b/app/src/main/res/menu/play_back_bottom_menu.xml
@@ -11,6 +11,11 @@
         android:icon="@drawable/ic_search" />
 
     <item
+        android:id="@+id/playlistFragment"
+        android:title="@string/playlists"
+        android:icon="@drawable/ic_folder" />
+
+    <item
         android:id="@+id/profileFragment"
         android:title="@string/profile"
         android:icon="@drawable/ic_user" />
