--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,7 +21,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/play_back_buttons"
-        android:layout_width="412dp"
+        android:layout_width="match_parent"
         android:layout_height="72dp"
         android:background="#191921"
         app:layout_constraintBottom_toTopOf="@+id/play_back_bottom_navigation"
@@ -64,7 +65,7 @@
             android:id="@+id/home_card_view_song_details"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="16dp"
             app:cardCornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
