--- a/app/src/main/res/layout/fragment_search_youtube_songs.xml
+++ b/app/src/main/res/layout/fragment_search_youtube_songs.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.SearchYoutubeSongsFragment">
+    tools:context=".fragments.SearchYoutubeSongsFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_search_songs"
