--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,71 +7,25 @@
     app:startDestination="@id/homeFragment">
 
         <fragment android:id="@+id/homeFragment"
-            android:name="br.com.listennow.ui.fragments.HomeFragment"
+            android:name="br.com.listennow.fragments.HomeFragment"
             android:label="@string/home"
             tools:layout="@layout/fragment_home">
                 <action
-                    android:id="@+id/action_homeFragment_to_profileFragment"
-                    app:destination="@id/profileFragment" />
-                <action
                     android:id="@+id/action_homeFragment_to_searchNewSongs"
                     app:destination="@id/searchNewSongsFragment" />
+
                 <action
                     android:id="@+id/action_homeFragment_to_songDetailsFragment"
                     app:destination="@id/songDetailsFragment" />
-                <action
-                    android:id="@+id/action_homeFragment_to_playlistFragment"
-                    app:destination="@id/playlistFragment" />
-        </fragment>
-
-        <fragment android:id="@+id/profileFragment"
-            android:name="br.com.listennow.ui.fragments.ProfileFragment"
-            android:label="@string/profile"
-            tools:layout="@layout/fragment_profile">
         </fragment>
 
         <fragment android:id="@+id/searchNewSongsFragment"
-            android:name="br.com.listennow.ui.fragments.SearchYoutubeSongsFragment"
+            android:name="br.com.listennow.fragments.SearchYoutubeSongsFragment"
             android:label="@string/search_new_songs"
-            tools:layout="@layout/fragment_search_youtube_songs">
-        </fragment>
+            tools:layout="@layout/fragment_search_youtube_songs" />
 
         <fragment android:id="@+id/songDetailsFragment"
-            android:name="br.com.listennow.ui.fragments.SongDetailsFragment"
+            android:name="br.com.listennow.fragments.SongDetailsFragment"
             android:label="@string/song_details"
-            tools:layout="@layout/fragment_song_details">
-        </fragment>
-
-        <fragment android:id="@+id/playlistFragment"
-            android:name="br.com.listennow.ui.fragments.PlaylistFragment"
-            android:label="@string/playlists"
-            tools:layout="@layout/fragment_playlist">
-                <action
-                    android:id="@+id/action_playlistFragment_to_newPlaylistFragment"
-                    app:destination="@id/newPlaylistFragment" />
-                <action
-                    android:id="@+id/action_playlistFragment_to_homePlaylistSongs"
-                    app:destination="@id/homePlaylistSongs" />
-        </fragment>
-
-        <fragment android:id="@+id/newPlaylistFragment"
-            android:name="br.com.listennow.ui.fragments.NewPlaylistFragment"
-            android:label="@string/new_playlist"
-            tools:layout="@layout/fragment_new_playlist">
-        </fragment>
-
-        <fragment android:id="@+id/homePlaylistSongs"
-            android:name="br.com.listennow.ui.fragments.PlaylistHomeSongsFragment"
-            android:label="@string/playlist_home"
-            tools:layout="@layout/fragment_playlist_home_songs">
-                <action
-                    android:id="@+id/action_homePlaylistSongs_to_selectPlaylistsSongs"
-                    app:destination="@id/selectPlaylistsSongs" />
-        </fragment>
-
-        <fragment android:id="@+id/selectPlaylistsSongs"
-            android:name="br.com.listennow.ui.fragments.PlaylistSelectSongsFragment"
-            android:label="@string/select_playlist_songs"
-            tools:layout="@layout/fragment_playlist_songs">
-        </fragment>
+            tools:layout="@layout/fragment_song_details"/>
 </navigation>
