--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,5 +27,10 @@
         <fragment android:id="@+id/songDetailsFragment"
             android:name="br.com.listennow.fragments.SongDetailsFragment"
             android:label="@string/song_details"
-            tools:layout="@layout/fragment_song_details"/>
+            tools:layout="@layout/fragment_song_details">
+
+                <argument
+                    android:name="songId"
+                    app:argType="string"/>
+        </fragment>
 </navigation>
