--- a/app/src/main/res/layout/fragment_search_youtube_songs.xml
+++ b/app/src/main/res/layout/fragment_search_youtube_songs.xml
@@ -10,32 +10,37 @@
         android:id="@+id/card_search_songs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true"
         android:layout_margin="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/gold"
+        app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/gold">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/listSongsYT"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintVertical_bias="0">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_yt_songs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
+            android:focusable="true"
             app:iconifiedByDefault="false"
             app:queryHint="@string/title_artist_album"
             app:searchHintIcon="@drawable/ic_search"
-            app:searchIcon="@drawable/ic_search"
-            android:focusable="true" />
+            app:searchIcon="@drawable/ic_search"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listSongsYT"
-        android:layout_width="409dp"
-        android:layout_height="677dp"
-        android:layout_marginTop="3dp"
-        app:layout_constraintTop_toBottomOf="@+id/card_search_songs"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="155dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/card_search_songs"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:listitem="@layout/fragment_search_youtube_songs_item"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
