--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,14 +43,55 @@
         android:layout_marginBottom="155dp"
         app:layout_constraintTop_toBottomOf="@+id/card_search_songs">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/songs"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toTopOf="@+id/play_back_buttons"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search"
-            tools:listitem="@layout/fragment_song_item" />
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/fragment_home_empty_image"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:src="@drawable/empty_results"
+                app:layout_constraintBottom_toTopOf="@+id/fragment_home_empty_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"/>
+
+            <TextView
+                android:id="@+id/fragment_home_empty_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/not_results_found_try_download_a_new_song"
+                android:textSize="16dp"
+                app:layout_constraintBottom_toTopOf="@+id/fragment_home_button_find_new_song"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_home_empty_image"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_marginVertical="10dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/fragment_home_button_find_new_song"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/find_a_new_song"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_home_empty_text"
+                app:icon="@drawable/ic_search"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/songs"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:listitem="@layout/fragment_song_item"
+                android:visibility="gone"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
