fix: Adjusting light-theme
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/15

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:id="@+id/play_back_buttons"
             android:layout_width="match_parent"
             android:layout_height="72dp"
-            android:background="#191921"
+            android:background="@color/playBackButtonsColor"
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintBottom_toTopOf="@+id/play_back_bottom_navigation"
@@ -81,7 +81,7 @@
                 android:layout_height="51dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/ic_play"
-                app:backgroundTint="@color/white"
+                app:backgroundTint="@color/iconColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/main_activity_song_name_artist"
