refactor: Using dataBinding
Issue: https://github.com/GeovaniTech/ListenNow-App/issues/10

--- a/app/src/main/res/layout/fragment_search_youtube_songs_item.xml
+++ b/app/src/main/res/layout/fragment_search_youtube_songs_item.xml
@@ -1,91 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp">
+<layout>
+    <data>
+        <variable
+            name="ytSong"
+            type="br.com.listennow.webclient.song.model.SearchYTSongResponse" />
+    </data>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/list_songs_search_cardView_thumb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fragment_search_youtube_songs_buttons_and_texts"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintHorizontal_bias="0">
-
-        <ImageView
-            android:id="@+id/list_songs_search_thumb"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/fragment_search_youtube_songs_buttons_and_texts"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/list_songs_search_cardView_thumb"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constrainedWidth="true">
+        android:layout_margin="16dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/fragment_search_youtube_songs_artist_song_name_constraint"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/list_songs_search_cardView_thumb"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintEnd_toStartOf="@+id/list_songs_search_sync"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constrainedWidth="true">
+            app:layout_constraintEnd_toStartOf="@+id/fragment_search_youtube_songs_buttons_and_texts"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintHorizontal_bias="0">
 
-            <TextView
-                android:id="@+id/list_songs_search_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/list_songs_search_artist"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Love Story" />
-
-            <TextView
-                android:id="@+id/list_songs_search_artist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
+            <ImageView
+                android:id="@+id/list_songs_search_thumb"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:text="Taylor Swift" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintTop_toTopOf="parent"
+                bindImage="@{ytSong.thumb}"/>
+        </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/list_songs_search_sync"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/data_transfer"
-            android:backgroundTint="@color/gray"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/fragment_search_youtube_songs_buttons_and_texts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintStart_toEndOf="@+id/fragment_search_youtube_songs_artist_song_name_constraint"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/list_songs_search_cardView_thumb"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constrainedWidth="true">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/fragment_search_youtube_songs_artist_song_name_constraint"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="7dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toStartOf="@+id/list_songs_search_sync"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constrainedWidth="true">
+
+                <TextView
+                    android:id="@+id/list_songs_search_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/list_songs_search_artist"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Love Story"
+                    android:text="@{ytSong.title}"/>
+
+                <TextView
+                    android:id="@+id/list_songs_search_artist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="Taylor Swift"
+                    android:text="@{ytSong.artist}"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <Button
+                android:id="@+id/list_songs_search_sync"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/data_transfer"
+                android:backgroundTint="@color/gray"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toEndOf="@+id/fragment_search_youtube_songs_artist_song_name_constraint"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
